--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,6 @@
 ./04-gif-expert-app/node_modules
 ./05-hook-app/node_modules
 ./05-hook-app/src/tests/__snapshots__
+./05-hook-app/src/tests/components/03-explamples/__snapshots__
+./05-hook-app/src/tests/components/04-useRef/__snapshots__/RealExampleRef.test.js.snap
+./05-hook-app/src/tests/components/08-useReducer/__snapshots__/TodoListItem.test.js.snap
