--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,4 @@
 ./05-hook-app/src/tests/components/08-useReducer/__snapshots__/TodoListItem.test.js.snap
 
 ./07-heroe-app/node_modules
+./07-heroe-app/src/test/routers/__snapshots__/AppRouter.test.js.snap
