--- a/10-calendar-backend/.env
+++ b/10-calendar-backend/.env
@@ -1,2 +1,3 @@
 PORT=4000
-DB_CONNECTION=mongodb+srv://<username>:<password>@dbnode.kr37u.mongodb.net/<database_name>
+DB_CONNECTION=mongodb+srv://<username>:<password>@dbnode.kr37u.mongodb.net/<db_name>
+SECRET_JWT_SEED=<your_secret_seed>
